# ai-code-tear

./: .gitignore  README.md  main.py  pyproject.toml
practice/20260319/: LayerNorm.py  RMSNorm.py
tear/: CrossEntropyLoss.py  LayerNorm.py  MultiHeadAttention.py  PositionalEncoding.py  RMSNorm.py
